[package]
name = "bamasat-1"
version = "0.1.0"
authors = ["vagrant"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kubos-app = {path = "../apis/app-api/rust"}
log = "^0.4.0"
failure = "0.1.2"
getopts = "0.2"
kubos-service = { path = "../services/kubos-service" }
juniper =  "0.11"
rust-uart = { path = "../hal/rust-hal/rust-uart" }
serial = "0.4"
kubos-system = { path = "../apis/system-api" }
comms-service = { path = "../libs/comms-service" }
Telemetry-BAMASAT = { path = "../Telemetry-BAMASAT"}
EPS-BAMASAT = { path = "../EPS-BAMASAT"}
CTRL-BAMASAT = { path = "../CTRL-BAMASAT"}


